背景，音乐，首页动画

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html; charset=utf-8">
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>大东喊你来打Call</title>
+    <title>勿忘初心</title>
 
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
@@ -22,7 +22,7 @@
 </head>
 <body>
 <audio id="musicfx" class="audio" loop="loop" autoplay="">
-    <source src="audio/bg.mp3" type="audio/mp3">
+    <source src="audio/bgm.mp3" type="audio/mp3">
 </audio>
 
 
@@ -33,17 +33,14 @@
 
     <div class="page page-1-1 page-current">
         <div class="wrap">
-            <img class="img_logo pt-page-moveFromTopFade" src="img/logo.png"/>
-            <img class="img_1 pt-page-fadeIn1s1s" src="img/p1i1.png"/>
+            <img id="logo_img" class="img_1 pt-page-fadeIn1s1s" src="img/p1i1.png"/>
             <img class="img_2 pt-page-fadeIn1s2s" src="img/p1i2.png"/>
-            <img class="img_3 pt-page-fadeIn1s3s" src="img/p1i3.png"/>
 
             <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
         </div>
     </div>
     <div class="page page-2-1 hide">
         <div class="wrap">
-            <img class="img_logo pt-page-moveFromTopFade" src="img/logo.png"/>
             <img class="img_1 hide pt-page-fadeIn1s1s" src="img/p2i1.png"/>
             <img class="img_2 hide pt-page-fadeIn1s2s" src="img/p2i2.png"/>
             <img class="img_6 hide pt-page-moveIconUp" src="img/icon_up.png"/>
@@ -52,7 +49,6 @@
 
     <div class="page page-3-1 hide">
         <div class="wrap">
-            <img class="img_logo pt-page-moveFromTopFade" src="img/logo.png"/>
             <img class="img_1 hide pt-page-fadeIn1s1s" src="img/p3i1.png"/>
             <img class="img_2 hide pt-page-fadeIn1s2s" src="img/p3i2.png"/>
             <img class="img_6 hide pt-page-moveIconUp" src="img/icon_up.png"/>
@@ -64,7 +60,6 @@
         </div>
         <div class="wrap page-4-1-wrap">
 
-            <img class="img_logo" src="img/logo.png"/>
 
             <div class="content">
                 <div class="img_container">
