--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="wrap">
             <img class="img_1 hide pt-page-fadeIn1s1s" src="img/p2i1.png"/>
             <img class="img_2 hide pt-page-fadeIn1s2s" src="img/p2i2.png"/>
+            <img class="img_3 hide pt-page-fadeIn1s3s" src="img/p2i3.png"/>
             <img class="img_6 hide pt-page-moveIconUp" src="img/icon_up.png"/>
         </div>
     </div>
@@ -55,40 +56,181 @@
         </div>
     </div>
 
-    <div class="page page-4-1 hide" id="targetDom">
-        <div id="img" class="zimg">
-        </div>
-        <div class="wrap page-4-1-wrap">
-
-
-            <div class="content">
-                <div class="img_container">
-                    <img class="img_1" src="img/p5i1.png"/>
-                    <span class="share_number"></span>
-                    <img class="img_2" src="img/p5i2.png"/>
-                </div>
-                <div class="input_container">
-                    <input id="in1" class="form-control input-lg" type="text" placeholder="我是">
-                </div>
-                <span class="render_text"></span>
-                <img class="img_3" src="img/p5i3.png"/>
-            </div>
-
-            <div class=" hide" id="erweima">
-                <img class="img_4" src="img/p5i4.png"/>
-            </div>
-
-            <div class="hide" id="save_note">
-                <img id="save_img" src="img/save_note.png">
-            </div>
-
-            <div class="div_btn btn btn-info" id="submit">
-                点击生成祝福
-            </div>
+    <div class="page page-4-1 hide">
+        <div class="wrap">
+            <img class="img_1 hide pt-page-fadeIn1s1s" src="img/p4i1.png"/>
+            <img class="img_2 hide pt-page-fadeIn1s2s" src="img/p4i2.png"/>
+            <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
         </div>
 
     </div>
 
+    <div class="page page-5-1 hide">
+        <div class="wrap">
+            <img class="img_1 hide pt-page-fadeIn1s1s" src="img/p5i1.png"/>
+            <img class="img_2 hide pt-page-fadeIn1s2s" src="img/p5i2.png"/>
+            <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
+        </div>
+
+    </div>
+
+    <div class="page page-6-1 hide">
+        <div class="wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class="img_1 hide" src="img/p6i1.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_2 hide pt-page-moveFromRight" src="img/p6i2.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_3 hide pt-page-moveFromRight" src="img/p6i3.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_4 hide pt-page-moveFromRight" src="img/p6i4.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_5 hide pt-page-moveFromRight" src="img/p6i5.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_7 hide pt-page-moveFromRight" src="img/p6i6.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_8 hide pt-page-moveFromRight" src="img/p6i7.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_9 hide pt-page-moveFromRight" src="img/p6i8.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_10 hide pt-page-moveFromRight" src="img/p6i9.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_11 hide pt-page-moveFromRight" src="img/p6i10.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_12 hide pt-page-moveFromRight" src="img/p6i11.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_13 hide pt-page-moveFromRight" src="img/p6i12.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_14 hide pt-page-moveFromRight" src="img/p6i13.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_15 hide pt-page-moveFromRight" src="img/p6i14.png"/>
+                    </div>
+                    <div class="text-left col-sm-12">
+                        <img class="img-pro img_16 hide pt-page-moveFromRight" src="img/p6i15.png"/>
+                    </div>
+                </div>
+            </div>
+            <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
+        </div>
+
+    </div>
+
+    <div class="page page-7-1 hide">
+        <div class="wrap">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class="img_1" src="img/p7i1.png"/>
+                    </div>
+                    <div class="col-sm-12">
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                Android
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-info progress-bar-striped active" style="width: 88%;">
+                                        <div class="progress-value">88%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                C/C++
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 50%;">
+                                        <div class="progress-value">50%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                Html
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-warning progress-bar-striped active" style="width: 85%;">
+                                        <div class="progress-value">85%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                PHP
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-danger progress-bar-striped active" style="width: 70%;">
+                                        <div class="progress-value">70%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                PS
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 70%;">
+                                        <div class="progress-value">70%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 language-text">
+                                Python
+                            </div>
+                            <div class="col-xs-10">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-info progress-bar-striped active" style="width: 60%;">
+                                        <div class="progress-value">60%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+            </div>
+
+            <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
+        </div>
+
+    </div>
+
+
+    <div class="page page-8-1 hide">
+        <div class="wrap">
+            <img class="img_1 hide pt-page-moveFromBottom" src="img/p8i1.png"/>
+        </div>
+
+    </div>
 
 </div>
 <script src="js/jquery-3.3.1.min.js"></script>
