--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <audio id="musicfx" class="audio" loop="loop" autoplay="">
-    <source src="audio/bgm.mp3" type="audio/mp3">
+    <source src="audio/bg1.mp3" type="audio/mp3">
 </audio>
 
 
