--- a/index.html
+++ b/index.html
@@ -30,12 +30,21 @@
 
     <div id="div_music" class="music_logo" onclick="musicClick()">
     </div>
-
+    <div id="page-num">1页/共11页</div>
     <div class="page page-1-1 page-current">
         <div class="wrap">
             <img id="logo_img" class="img_1 pt-page-fadeIn1s1s" src="img/p1i1.png"/>
             <img class="img_2 pt-page-fadeIn1s2s" src="img/p1i2.png"/>
-
+            <div class="load-container">
+                <div class="loading-spinner">
+                    <div class="rect1"></div>
+                    <div class="rect2"></div>
+                    <div class="rect3"></div>
+                    <div class="rect4"></div>
+                    <div class="rect5"></div>
+                </div>
+                资源加载中，请稍后
+            </div>
             <img class="img_6 pt-page-moveFromBottomFade" src="img/icon_up.png"/>
         </div>
     </div>
